--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/languages/javascript.min.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.10/js/all.js" integrity="sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet"> 
   </head>
 
   <body>
@@ -55,11 +57,11 @@
             <div id="machine3Result" class="col-xs-4 machineResult">Sauce</div>
           </div>
         
-          <div class="btn-group btn-group-justified" role="group">
-            <button id="randomizeButton" type="button" class="btn btn-danger btn-lg">Shuffle</button>
-          </div>
         </div>
         
+        <div class="btn-group btn-group-justified" role="group">
+          <button id="randomizeButton" type="button" class="btn btn-danger btn-lg">Shuffle</button>
+        </div>
       </div>
     </div>
 
